fix(checkout): spacing in nupay description

--- a/packages/checkout/core/src/components/malga-payments-nupay/partials/malga-payments-nupay-content/malga-payments-nupay-content.scss
+++ b/packages/checkout/core/src/components/malga-payments-nupay/partials/malga-payments-nupay-content/malga-payments-nupay-content.scss
@@ -15,6 +15,7 @@
 
   & > h5 {
     @extend %typography-subtitle1;
+    margin-bottom: var(--malga-checkout-spacing-xxs);
   }
 
   & > ul {
